TP3: Agregado un poco de texto en sección de figuras de Lissajouse.

--- a/TP3/66.02 - TP3.Grupo.1.tex
+++ b/TP3/66.02 - TP3.Grupo.1.tex
@@ -361,8 +361,16 @@ señal a partir del cual, el sistema de barrido empieza a actuar. Este ajuste no
 
 
 % MEDICIONES CON EL OSCILOSCOPIO - Modo X-Y y figuras de Lissajous
-\subsection{Modo X-Y y figuras de Lissajous}
+\subsection{Modo \textit{X-Y} y figuras de Lissajous}
+	
+	Se desea ahora mostrar sobre la pantalla del osciloscopio la relación de frecuencias que hay entre dos señales mediante el funcionamiento del modo \textit{X-Y}. Para esto se hará uso de un circuito RC compuesto por una resistencia de 47$\Omega$ y un capacitor de 22$\mu$F. El generador de funciones será la fuente de dicho circuito, y se configurará de manera tal de entregar una forma sinusoidal. Conectaremos el \textit{CH1} del osciloscopio a la salida del generador, y el \textit{CH2} entre las puntas del capactor. Téngase en cuenta que las masas de ambas puntas deben estar conectadas entre sí, por lo que, una de las puntas del capacitor debe estar unida al extremo del generador que se considera como tierra. Hecho esto, seleccionaremos el modo vertical en \textit{X-Y}. Si variamos la frecuencia del generador podremos ver que la forma de la imagen mostrada en la pantalla va adquiriendo distintas deformaciones. 
+	\par
+	En nuestro caso tenemos una relacion de frecuencias 1:1 por lo que podremos ver figuras como las que se muestran en la \textit{Figura X}.
 
+
+%%%% AQUI VA LA IMAGEN DE FIGURAS DE LISAJOUSE PARA RELACION 1:1
+
+	
 \bigskip
 
 
