--- a/trunk/TP3/66.02 - TP3.Grupo.1.tex
+++ b/trunk/TP3/66.02 - TP3.Grupo.1.tex
@@ -209,7 +209,7 @@
 % DIAGRAMA EN BLOQUES DEL OSCILOSCOPIO - Acople del sistema vertical con el sistema horizontal
 \subsection{Acople del sistema vertical con el sistema horizontal}
 
-	Se mencinarán ahora las posibles formas de acoplamiento entre los sistemas vertical y horizontal. Ya que se puede querer observar distintas señales, el instrumento permite elegir el modo de acoplamiento para conseguir el disparo estable en las distintas situaciones:
+	Se mencionarán ahora las posibles formas de acoplamiento entre los sistemas vertical y horizontal. Ya que se puede querer observar distintas señales, el instrumento permite elegir el modo de acoplamiento para conseguir el disparo estable en las distintas situaciones:
 \medskip
 
 \begin{itemize}
